--- a/style.css
+++ b/style.css
@@ -7,8 +7,10 @@ h1{
   text-align: center;
 }
 
-img {
-  display: inline-block;
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .box1{
