margins added, boxes to fit viewport

--- a/style.css
+++ b/style.css
@@ -22,10 +22,10 @@ h1{
 
 .box2{
   background-color: #6497b1;
-  width: 800px;
+  width: 100%;
 }
 
 .box3{
   background-color: #b3cde0;
-  width: 800px;
+  width: 100%;
 }
