--- a/src/elements.css
+++ b/src/elements.css
@@ -13,8 +13,13 @@ html, body {
 h1 {
     font-size: 36px;
 }
+
+p {
+  font-size: 16px;
+}
+
 h1, h2, h3, p {
-    color: #837A75;
+    color: white;
     margin: 0;
     padding: 5px 0;
     cursor: default;
@@ -23,15 +28,16 @@ h1, h2, h3, p {
 table {
     font-family: arial, sans-serif;
     border-collapse: collapse;
-    height: calc(70% - 100px);
     overflow: auto;
     display:block;
+    margin-bottom: 10px;
 }
 
 td, th {
     border: 1px solid #85CB33;
     text-align: left;
     padding: 8px;
+    font-size: 24px;
 }
 
 tr:nth-child(even) {
