--- a/src/flexbox.css
+++ b/src/flexbox.css
@@ -1,5 +1,6 @@
 .title-section {
     width: 100%;
+    height: 85px;
     padding: 10px 0;
     background-color: black;
 
@@ -9,6 +10,8 @@
 }
 
 .main-section {
+    height: calc(100% - 110px);
+
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -19,22 +22,34 @@
     border-radius: 8px;
     border: 2px solid #85CB33;
     min-width: 290px;
-    margin-right: 5px;
+    width: 45%;
+    margin: 10px;
+    height: 90%;
 
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+    flex-grow: 1;
 }
 
 .experience {
     border-radius: 8px;
     border: 2px solid #D30C7B;
-    margin-left: 5px;
+    margin: 10px;
+    width: 45%;
+    height: 90%;
 
     display: flex;
     flex-direction: column;
     align-items: center;
-    align-self: flex-start;
+    justify-content: center;
+    flex-grow: 1;
+}
+
+.react {
+    width: 100%;
+    height: 100%;
 }
 
 .technologies {
@@ -47,7 +62,9 @@
     border-radius: 8px;
     border: 2px solid #D30C7B;
     padding: 10px;
-    margin: 10px;
+    margin: 17.5px;
+    height: 50%;
+    width: calc(100% - 60px);
 
     display: flex;
     flex-direction: column;
