--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ a {
 * {
     margin: 0;
     padding: 0;
-    font-family: sans-serif;
+    font-family: "Trajan";
 }
 
 .page, body {
@@ -63,7 +63,7 @@ a {
 .tab h3 {
     margin-left: 10px;
     margin-right: 10px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     padding-bottom: 5px;
     border-bottom: 2px solid #000000;
     display: inline-block;
@@ -76,4 +76,9 @@ a {
 
 .info:target {
     height: auto;
+}
+
+.info h4 {
+    color: #404040;
+    margin-bottom: 10px;
 }
