--- a/a1styles.css
+++ b/a1styles.css
@@ -27,7 +27,7 @@ body {
     background-color: lightgreen;
 }
 #quiz-header {
-    background-color: cyan;
+    background-color: #ff8080;
 }
 .content {
     font-family: "Arvo", serif; 
